--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1188,7 +1188,7 @@ section,
 # About Section
 --------------------------------------------------------------*/
 .about {
-  background: url("../img/about-bg.JPG") center center;
+  background: url("../img/about-bg.jpg") center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
