--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1246,6 +1246,13 @@ section,
 .about .about-img:hover {
   transform: scale(1.03);
 }
+.about-img {
+  border: 6px solid color-mix(in srgb, var(--default-color), transparent 80%);
+  transition: 0.3s;
+}
+.about-img:hover {
+  transform: scale(1.03);
+}
 
 /*--------------------------------------------------------------
 # Why Us Section
